# PeopleDetection

./: setup.cfg
src/: client.py  main.py
src/res/: service.kv
test/: test_dummy.py
