# NOTE: update the `[project]` section with your app details
[metadata]
name = people_detection
version = 0.0.1
author = Yue Yang
author_email = yueyang625@mail.fresnostate.edu
url = https://github.com/hoshinotsuki/PeopleDetection
download_url = https://github.com/hoshinotsuki/PeopleDetection
keywords = robotics, open-source
license_files = LICENSE
description = people_detection app for the Amiga robot in Farm Robotics Challenge 2023
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent  

# NOTE: update the the requirements for your app
[options]
python_requires = >=3.6
setup_requires =
    wheel
    sophus
    farm-ng-core
install_requires =
    wheel
    kivy
    farm_ng_amiga    
    protobuf
    grpcio
    farm-ng-package
    farm-ng-core
    sophus
    PyTurboJPEG
    opencv-python
    limbus
tests_require =
    pytest
    pytest-runner
    pytest-asyncio
    pytest-mypy

test_suite = tests
# NOTE: do not touch this path unless you know what you are doing
package_dir =
    = libs

packages =
    farm_ng
    farm_ng.canbus
    farm_ng.oak
    farm_ng.people_detection
    farm_ng.service

[options.extras_require]
dev =
    #pytest
    #mypy
    #pre-commit>=2.0
    pytest==7.1.2
    pytest-asyncio==0.19.0
    pytest-mypy==0.9.1
    pylint-protobuf==0.20.2
    pre-commit==2.20.0
    mypy==0.971
    types-protobuf
    pylint
    grpcio-tools
    mypy-protobuf
    pylint-protobuf==0.20.2

[flake8]
max-line-length = 120

[mypy]
files = libs/, src/
pretty = True
ignore_missing_imports = True

[options.package_data]
farm_ng.oak =
    *.proto

farm_ng.canbus =
    *.proto

farm_ng.people_detection =
    *.proto

farm_ng.service =
    *.proto
